# kernow-mcp-servers

./: .gitignore  CLAUDE.md  README.md  mcp-servers
.github/workflows/: build-a2a-orchestrator.yaml  build-domain-mcps.yaml  invest-mcp.yml
a2a-orchestrator/: Dockerfile  README.md  pyproject.toml
a2a-orchestrator/src/a2a_orchestrator/: __init__.py  fallback.py  llm.py  mcp_client.py  models.py  server.py  specialists.py  synthesis.py  tool_catalog.py
a2a-orchestrator/tests/: __init__.py  test_server.py
domains/home/: Dockerfile  pyproject.toml
domains/home/src/home_mcp/: __init__.py  server.py
domains/home/src/home_mcp/tools/: __init__.py  adguard.py  homeassistant.py  homepage.py  tasmota.py  unifi.py
domains/infrastructure/: Dockerfile  README.md  pyproject.toml
domains/infrastructure/src/infrastructure_mcp/: __init__.py  server.py
domains/infrastructure/src/infrastructure_mcp/tools/: __init__.py  cloudflare.py  infisical.py  kubernetes.py  omada.py  opnsense.py  proxmox.py  truenas.py
domains/invest/: Dockerfile  README.md  pyproject.toml
domains/invest/src/invest_mcp/: __init__.py  server.py
domains/invest/src/invest_mcp/tools/: __init__.py  investmentology.py
domains/knowledge/: Dockerfile  README.md  pyproject.toml
domains/knowledge/src/knowledge_mcp/: __init__.py  server.py
domains/knowledge/src/knowledge_mcp/jobs/: __init__.py  reconcile.py
domains/knowledge/src/knowledge_mcp/tools/: __init__.py  neo4j.py  outline.py  qdrant.py  retrieval.py  silverbullet.py  vikunja.py
domains/knowledge/src/knowledge_mcp/utils/: __init__.py  ranking.py
domains/media/: Dockerfile  README.md  pyproject.toml
domains/media/src/media_mcp/: __init__.py  server.py
domains/media/src/media_mcp/tools/: __init__.py  cleanuparr.py  huntarr.py  maintainerr.py  notifiarr.py  overseerr.py  plex.py  prowlarr.py  radarr.py  recommendarr.py  sabnzbd.py  sonarr.py  tautulli.py  transmission.py
domains/observability/: Dockerfile  README.md  pyproject.toml
domains/observability/src/observability_mcp/: __init__.py  server.py
domains/observability/src/observability_mcp/clients/: __init__.py
domains/observability/src/observability_mcp/tools/: __init__.py  alerts.py  coroot.py  gatus.py  grafana.py  keep.py  metrics.py  ntopng.py
kubernetes/domains/: a2a-infisical-secret.yaml  external.yaml  home.yaml  infrastructure.yaml  invest.yaml  knowledge.yaml  media.yaml  observability.yaml  silverbullet-sync-cronjob.yaml
shared/: README.md  pyproject.toml
shared/kernow_mcp_common/: __init__.py  base.py  infisical.py
