[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-orchestrator"
version = "1.0.0"
description = "A2A Orchestrator - Parallel specialist agents for alert triage"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Kernow Homelab" }
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
a2a-orchestrator = "a2a_orchestrator.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
