[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kernow-mcp-common"
version = "0.1.0"
description = "Shared utilities for Kernow MCP servers"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Charlie Shreck" }
]
dependencies = [
    "fastmcp>=0.4.0",
    "starlette>=0.38.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["kernow_mcp_common"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
