[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-mcp"
version = "1.0.0"
description = "Consolidated Home MCP - Home Assistant, Tasmota, UniFi, AdGuard, Homepage"
requires-python = ">=3.11"
dependencies = [
    "kernow-mcp-common",
    "fastmcp>=2.7.0",
    "httpx>=0.28.0",
    "uvicorn>=0.34.0",
    "starlette>=0.40.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["src"]
