[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infrastructure-mcp"
version = "1.0.1"  # Phase 0.2: ArgoCD destination namespace support
description = "Consolidated MCP for Kubernetes, VM, storage, DNS, and secrets management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.7.0",
    "httpx>=0.28.0",
    "uvicorn>=0.34.0",
    "starlette>=0.40.0",
    "pydantic>=2.0.0",
]

[project.scripts]
infrastructure-mcp = "infrastructure_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/infrastructure_mcp"]
