[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "media-mcp"
version = "1.0.0"
description = "Consolidated Media MCP - Plex, Sonarr, Radarr, Prowlarr, Overseerr, Tautulli, Transmission, SABnzbd"
requires-python = ">=3.11"
dependencies = [
    "kernow-mcp-common",
    "fastmcp>=2.7.0",
    "httpx>=0.28.0",
    "uvicorn>=0.34.0",
    "starlette>=0.40.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/media_mcp"]
