[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "observability-mcp"
version = "1.0.0"
description = "Consolidated observability MCP server for Kernow homelab"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Charlie Shreck" }
]
dependencies = [
    "fastmcp>=0.4.0",
    "starlette>=0.38.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
observability-mcp = "observability_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/observability_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
